# downloads

dataset-ageoff/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dataset-ageoff/resources/: ageoff-pending-config.yaml
dataset-ageoff/src/dataset_ageoff/: cli.py
dataset-ageoff/src/dataset_ageoff/audit/: ageoff_period_manager.py  ageoff_writer.py  cli.py  models.py
dataset-ageoff/src/dataset_ageoff/clients/: dataset_api_client.py
dataset-ageoff/src/dataset_ageoff/config/: file_config_loader.py
dataset-ageoff/src/dataset_ageoff/inventory/: ageoff_pending_manager.py  ageoff_period_manager.py  cli.py  inventory_writer.py  models.py
dataset-ageoff/src/dataset_ageoff/report/: ageoff_summary_report.py  cli.py
dataset-ageoff/src/dataset_ageoff/utils/: logger.py  runner.py
dataset-ageoff/src/object_ageoff/: cli.py  models.py  orchestrator.py  test_generator.py  timeline.py
devpi/: .gitignore  Dockerfile  README.md  dev-server.sh  docker-compose.yml  pyproject.toml
devpi/example/: README.md  pyproject.toml
devpi/resources/: entrypoint.sh  utils.sh
devpi/resources/devpi/: devpi-client
devpi/resources/nginx/: devpi.conf  nginx-complete.conf  nginx-insecure.conf  nginx-secure.conf
etl/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
etl/resources/etl/config/: dataflow-1-config.yaml  dataflow-2-config.yaml  stage-1-config.yaml  stage-2-config.yaml  stage-3-config.yaml
etl/scripts/dev/: convert_json_to_parquet.py  convert_parquet_to_json.py  generate_files.sh  generate_json_file.py  install_zscaler_ca.sh  start_docker_services.sh  start_podman_services.sh  start_services.sh
etl/services/etl/: Dockerfile  pyproject.toml
etl/services/etl/resources/config/: dataflow-1-config.yaml  (+3 more)
etl/src/cdet_etl/: __main__ copy.py  __main__.py
etl/src/cdet_etl/config/: base_config_repository.py
etl/src/cdet_etl/encoders/: pandas_encoder.py
etl/src/cdet_etl/processors/: dataflow_registry.py
etl/src/cdet_etl/readers/: __init__.py  base_data_source.py  base_reader.py
etl/src/cdet_etl/transformers/: base_transformer.py  date_partition_transformer.py  status_transformer.py
etl/src/cdet_etl/utils/: encode.py  pyarrow_s3_fs_factory.py  retry.py  s3_client_factory.py
etl/src/cdet_etl/writers/: __init__.py  base_write_context.py  base_writer.py
(+192 files in other folders)
