[project]
name = "pypi-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Allen Biehl",email = "biehl_evan@bah.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "devpi-server (>=6.20.1,<7.0.0)",
    "devpi-web (>=5.1.0,<6.0.0)",
    "devpi-client (>=7.3.0,<8.0.0)",
    "devpi-lockdown (>=2.0.0,<3.0.0)",
    "devpi-tokens[client] (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pypi_repo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
