[project]
name = "cdet-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Allen Biehl",email = "biehl_evan@bah.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "boto3 (>=1.41.3,<2.0.0)",
    "opensearch-py (>=3.1.0,<4.0.0)",
    "pandas",
    "pyarrow==25.0.0",    
    "memory-profiler",
    "psutil",
    "confluent-kafka",
    "pyyaml"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]