[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Allen Biehl",email = "biehl_evan@bah.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "example", from = "src"}]

[[tool.poetry.source]]
name = "intranet"
url = "http://localhost:3141/root/pypi/+simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
